pricing table button disalignment issue fixed

--- a/css/_pricing-table.scss
+++ b/css/_pricing-table.scss
@@ -109,8 +109,8 @@
 
                 .advantage-list {
                     list-style: none;
-                    padding-left: 25px;
-                    margin-left: 16px;
+                    padding-left: 15px;
+                    margin-left: 15px;
                     margin-bottom: 35px;
                     font-family: 'Eina02-Regular';
                     font-size: 15px;
