--- a/css/main.css
+++ b/css/main.css
@@ -877,8 +877,8 @@
 
 .pricing-table .container .table .plan .advantage-list {
   list-style: none;
-  padding-left: 25px;
-  margin-left: 16px;
+  padding-left: 15px;
+  margin-left: 15px;
   margin-bottom: 35px;
   font-family: 'Eina02-Regular';
   font-size: 15px;
